feat: 添加分析脚本以增强用户行为跟踪

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RIA 铁路在线地图</title>
+    <script defer src="https://analysis.602007.xyz/script.js" data-website-id="29765b86-a05b-4afc-8626-00d504e5b907"></script>
   </head>
   <body>
     <div id="root"></div>
